// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Breadcrumb props 1`] = `
Object {
  "aria-label": "Breadcrumb",
  "children": <Context.Provider
    value={
      Object {
        "overrides": undefined,
      }
    }
  >
    <List
      isOrdered={true}
      listStyleType="none"
      orientation="horizontal"
    />
  </Context.Provider>,
  "className": "css-1fie8gx css-63it0p css-1qnz8fc bb-Box bb-Navigation bb-Breadcrumb",
  "role": "navigation",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3.emotion-3.emotion-3:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-4 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-8 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8 .bb-Icon {
  vertical-align: -0.125em;
}

abbr.emotion-23 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-23 {
  font-family: monospace;
}

i.emotion-23 {
  font-style: italic;
}

kbd.emotion-23 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-23 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-23 {
  font-weight: bold;
}

sub.emotion-23,
sup.emotion-23 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-23,
u.emotion-23 {
  text-decoration-skip: ink edges;
}

i.emotion-23,
cite.emotion-23,
var.emotion-23,
em.emotion-23 {
  font-style: italic;
}

kbd.emotion-23,
pre.emotion-23,
samp.emotion-23 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-23 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <li
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
  >
    <a
      class="emotion-0 emotion-8 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
      href="#"
    >
      Home
    </a>
  </li>
  <li
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
  >
    <a
      class="emotion-0 emotion-8 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
      href="#"
    >
      Business
    </a>
  </li>
  <li
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
  >
    <span
      aria-current="page"
      class="emotion-23 emotion-1 emotion-2 emotion-0 bb-Box bb-Text bb-BreadcrumbLink"
    >
      Staff Members
    </span>
  </li>
</div>
`;

exports[`composition use should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-0 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-0 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`defaultProps should render correctly for className 2`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 test bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 test bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 test bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-0 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`defaultProps should render correctly for separator 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        -
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        -
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-0 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`overrides Breadcrumb.Item.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-6 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

.emotion-17.emotion-17.emotion-17.emotion-17.emotion-17:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-17 {
  background-color: var(--bb-palette-blue, #0000ff);
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-17 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-0 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`overrides Breadcrumb.Link.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-10 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

.emotion-21 {
  background-color: var(--bb-palette-blue, #0000ff);
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-10 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-21 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-10 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`overrides Breadcrumb.Separator.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

.emotion-14 {
  background-color: var(--bb-palette-red, #ff0000);
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-0 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`overrides Breadcrumb.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  list-style: unset;
  list-style-type: none;
}

.emotion-4 .emotion-4 {
  margin-left: 1rem;
}

.emotion-4 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-4 {
  list-style-type: decimal;
}

.emotion-4 .emotion-4 {
  list-style-type: lower-alpha;
}

.emotion-4 .emotion-4 .emotion-4 {
  list-style-type: lower-roman;
}

.emotion-4.emotion-4.emotion-4 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-4.emotion-4.emotion-4 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-6 {
  list-style-type: none!important;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-8 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-12 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-12 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-15 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-33 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-33 {
  font-family: monospace;
}

i.emotion-33 {
  font-style: italic;
}

kbd.emotion-33 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-33 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-33 {
  font-weight: bold;
}

sub.emotion-33,
sup.emotion-33 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-33,
u.emotion-33 {
  text-decoration-skip: ink edges;
}

i.emotion-33,
cite.emotion-33,
var.emotion-33,
em.emotion-33 {
  font-style: italic;
}

kbd.emotion-33,
pre.emotion-33,
samp.emotion-33 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-33 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-1 emotion-12 emotion-2 emotion-3 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-15 emotion-2 emotion-3 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-1 emotion-12 emotion-2 emotion-3 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-15 emotion-2 emotion-3 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-33 emotion-2 emotion-3 emotion-1 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-0 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-0 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`theming Breadcrumb.Item.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-6 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-0 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`theming Breadcrumb.Link.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-10 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-10 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-10 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-10 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`theming Breadcrumb.Separator.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  list-style: unset;
  list-style-type: none;
}

.emotion-3 .emotion-3 {
  margin-left: 1rem;
}

.emotion-3 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  list-style-type: decimal;
}

.emotion-3 .emotion-3 {
  list-style-type: lower-alpha;
}

.emotion-3 .emotion-3 .emotion-3 {
  list-style-type: lower-roman;
}

.emotion-3.emotion-3.emotion-3 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-3.emotion-3.emotion-3 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-5 {
  list-style-type: none!important;
}

.emotion-6.emotion-6.emotion-6.emotion-6.emotion-6:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-14 {
  display: inline;
  margin-left: 0.5rem;
}

.emotion-14 {
  background-color: var(--bb-palette-red, #ff0000);
}

abbr.emotion-32 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-32 {
  font-family: monospace;
}

i.emotion-32 {
  font-style: italic;
}

kbd.emotion-32 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-32 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-32 {
  font-weight: bold;
}

sub.emotion-32,
sup.emotion-32 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-32,
u.emotion-32 {
  text-decoration-skip: ink edges;
}

i.emotion-32,
cite.emotion-32,
var.emotion-32,
em.emotion-32 {
  font-style: italic;
}

kbd.emotion-32,
pre.emotion-32,
samp.emotion-32 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-32 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-List"
  >
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-0 emotion-11 emotion-1 emotion-2 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-14 emotion-1 emotion-2 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-6 emotion-7 emotion-1 emotion-2 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-32 emotion-1 emotion-2 emotion-0 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;

exports[`theming Breadcrumb.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  list-style: unset;
  list-style-type: none;
}

.emotion-4 .emotion-4 {
  margin-left: 1rem;
}

.emotion-4 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-4 {
  list-style-type: decimal;
}

.emotion-4 .emotion-4 {
  list-style-type: lower-alpha;
}

.emotion-4 .emotion-4 .emotion-4 {
  list-style-type: lower-roman;
}

.emotion-4.emotion-4.emotion-4 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-4.emotion-4.emotion-4 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-6 {
  list-style-type: none!important;
}

.emotion-7.emotion-7.emotion-7.emotion-7.emotion-7:not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-8 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-12 {
  color: var(--bb-palette-primary, #000000);
  fill: var(--bb-palette-primary, #000000);
  cursor: pointer;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-12 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-15 {
  display: inline;
  margin-left: 0.5rem;
}

abbr.emotion-33 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-33 {
  font-family: monospace;
}

i.emotion-33 {
  font-style: italic;
}

kbd.emotion-33 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-33 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-33 {
  font-weight: bold;
}

sub.emotion-33,
sup.emotion-33 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-33,
u.emotion-33 {
  text-decoration-skip: ink edges;
}

i.emotion-33,
cite.emotion-33,
var.emotion-33,
em.emotion-33 {
  font-style: italic;
}

kbd.emotion-33,
pre.emotion-33,
samp.emotion-33 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-33 .bb-Icon {
  vertical-align: -0.125em;
}

<nav
  aria-label="Breadcrumb"
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Navigation bb-Breadcrumb"
>
  <ol
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-List"
  >
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-1 emotion-12 emotion-2 emotion-3 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Home
      </a>
      <div
        class="emotion-15 emotion-2 emotion-3 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <a
        class="emotion-1 emotion-12 emotion-2 emotion-3 bb-Box bb-Link bb-BreadcrumbLink"
        href="#"
      >
        Business
      </a>
      <div
        class="emotion-15 emotion-2 emotion-3 bb-Box bb-BreadcrumbSeparator"
        role="presentation"
      >
        /
      </div>
    </li>
    <li
      class="emotion-7 emotion-8 emotion-2 emotion-3 bb-Box bb-ListItem bb-BreadcrumbItem"
    >
      <span
        aria-current="page"
        class="emotion-33 emotion-2 emotion-3 emotion-1 bb-Box bb-Text bb-BreadcrumbLink"
      >
        Staff Members
      </span>
    </li>
  </ol>
</nav>
`;
